# healthai-chat-agent

./: CHALLENGE.md  DOCUMENTATION.md  README.md
client/: .gitignore  app.json  package-lock.json  package.json
client/app/: index.tsx
client/components/: ConnectionBadge.tsx  MessageBubble.tsx  TypingIndicator.tsx
client/constants/: theme.ts
client/hooks/: useMessages.ts  useWebSocket.ts
client/types/: index.ts
server/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
server/chat/: __init__.py  agent.py  interface.py  persona.py  router.py  service.py  vector_store.py  ws_manager.py
server/config/: database.py  dependencies.py
server/message/: __init__.py  interface.py  model.py  repository.py  router.py  schema.py
server/scripts/: create_session.py  test_agent.py
server/session/: __init__.py  interface.py  model.py  repository.py  router.py  schema.py
server/test/: conftest.py
server/test/api/messages/: test_message_router.py
server/test/api/session/: test_session_router.py
