[project]
name = "mamahealth"
version = "0.1.0"
description = "Monorepo for the mama health coding challenge."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115,<1.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.9,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "python-dotenv>=1.1,<2.0",
    "websockets>=15.0,<16.0",
    "groq>=0.9,<1.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=1.3,<2.0",
    "pytest-cov>=6.1,<7.0",
    "ruff>=0.11,<1.0",
    "mypy>=1.15,<2.0",
    "pre-commit>=4.2,<5.0",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
package = false
